# operatist

./: Cargo.toml
.github/workflows/: ci.yml  cut-release.yml  publish-distros.yml  release.yml
src/: main.rs  paths.rs
src/commands/: asset.rs  config.rs  contact.rs  doc.rs  grant.rs  mod.rs  schedule.rs  setup.rs  subscription.rs  task.rs  tx.rs
src/worker/: brain.rs  mod.rs  storage.rs
supabase/migrations/: 0001_init.sql  0002_rename_ws_to_op.sql
website/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
website/src/: App.tsx  index.css  vite-env.d.ts
website/src/components/: Footer.tsx  Nav.tsx
website/src/components/ui/: button.tsx
website/src/features/landing/: About.tsx  CTA.tsx  Ecosystem.tsx  Features.tsx  Hero.tsx
website/src/layouts/: PublicLayout.tsx
website/src/lib/: asurada.ts
website/src/pages/: LandingPage.tsx
