[package]
name = "webchemist-workspace"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Company operations CLI for Webchemist — asset management, subscriptions, and business workflows powered by Asurada."
license = "MIT"
repository = "https://github.com/WebchemistCorp/workspace"
homepage = "https://github.com/WebchemistCorp/workspace"
authors = ["GennYoon <yoonwonyoul@webchemist.net>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
console = "0.15"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.39", features = ["bundled"] }
ureq = { version = "3", features = ["native-tls"] }
mime_guess = "2"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[[bin]]
name = "workspace"
path = "src/main.rs"
